--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: BankNotes
 main: AndreasHGK\BankNotes\Main
-version: 0.2.0
+version: 0.2.1-dev
 api: [3.0.0, 3.0.0-ALPHA12]
 load: POSTWORLD
 author: AndreasHGK
