--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,11 @@
 name: BankNotes
 main: AndreasHGK\BankNotes\Main
-version: 0.3.0
+version: 1.0.0
 api: [3.0.0, 3.0.0-ALPHA12]
 load: POSTWORLD
 author: AndreasHGK
 description: A plugin that makes money into an item to trade with!
-#depend: ["EconomyAPI"]
+softdepend: ["EconomyAPI"]
 
 commands:
  note:
