api 3.0.0 support (tested)

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: BankNotes
 main: AndreasHGK\BankNotes\Main
 version: 1.0.0
-api: [3.0.0, 3.0.0-ALPHA12]
+api: [3.0.0-ALPHA12, 3.0.0]
 load: POSTWORLD
 author: AndreasHGK
 description: A plugin that makes money into an item to trade with!
