--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: BankNotes
 main: AndreasHGK\BankNotes\Main
-version: 1.0.2
-api: [3.0.0-ALPHA12, 3.0.0]
+version: 1.1.0
+api: [3.0.0]
 load: POSTWORLD
 author: AndreasHGK
 description: A plugin that makes money into an item to trade with!
@@ -12,14 +12,11 @@ commands:
   description: "Withdraw money and put it on a bank note"
   usage: "/note {amount}"
   permission: banknotes.get
- banknote:
-  description: "Withdraw money and put it on a bank note"
-  usage: "/banknote {amount}"
-  permission: banknotes.get
+  aliases: ["withdraw"]
  banknotes:
-  description: "Withdraw money and put it on a bank note"
-  usage: "/banknotes {amount}"
-  permission: banknotes.get
+  description: "plugin commands"
+  usage: "/banknotes <subcommand>"
+  permission: banknotes.command
  deposit:
   description: "Deposit a note to your account"
   usage: "/deposit"
@@ -36,3 +33,6 @@ permissions:
    banknotes.deposit:
     default: true
     description: "allow players to deposit banknotes"
+   banknotes.command:
+    default: true
+    description: "plugin commands"
