--- a/resources/config.yml
+++ b/resources/config.yml
@@ -8,8 +8,9 @@ note-id: 339
 #you can use these values in the name and lore
 # {AMOUNT} - value of the note
 # {CREATOR} - the person who created the note
+# Add &r before a line so the line doesn't appear in italics
 
-note-name: "&e$&6{AMOUNT} &enote"
+note-name: "&r&e$&6{VALUE} &enote"
 
 #seperate lines with commas and keep everything in the square brackets []. Each line needs to be in quatation marks "" as well.
-note-lore: ["&4Right-click &cto claim this note", "&cCreated by: &4{CREATOR}"]
+note-lore: ["&r&4Right-click &cto claim this note", "&r&cCreated by: &4{CREATOR}"]
