Added EconomyID and new commands
The NoteVersion has been bumped to 2.1 , but the plugin is still compatible with 2.0 notes (from BankNotes v1.1.0)

EconomyID: Don't want to delete every banknote on the server? No worries: you can now easily reset the economy on your server by simply changing the EconomyID! Every note created before the change of the econid won't work. There currently is a setting for compatibility with notes from v1.1.0 .

Command /banknotes , previously disabled has now been repurposed. It now has a few subcommands.
- /banknotes check - see if the note you're holding is valid
- /banknotes admin reload - reload the plugin config
- /banknotes admin devalidate - make a note invalid. (Usefull for eg. handing over a note to show it)
- /banknotes admin validate - makes a devalidated note valid again

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,7 +5,7 @@ api: [3.0.0]
 load: POSTWORLD
 author: AndreasHGK
 description: A plugin that makes money into an item to trade with!
-softdepend: ["EconomyAPI"]
+depend: ["EconomyAPI"]
 
 commands:
  note:
@@ -13,11 +13,10 @@ commands:
   usage: "/note {amount}"
   permission: banknotes.get
   aliases: ["withdraw"]
-  #future command
- # banknotes:
-  # description: "plugin commands"
-  # usage: "/banknotes <subcommand>"
-  # permission: banknotes.command
+ banknotes:
+  description: "plugin commands"
+  usage: "/banknotes <subcommand>"
+  permission: banknotes.command
  deposit:
   description: "Deposit a note to your account"
   usage: "/deposit"
@@ -25,7 +24,7 @@ commands:
 
 permissions:
  banknotes:
-  default: true
+  default: false
   description: "bankNotes root permission (useless)"
   children:
    banknotes.get:
@@ -34,6 +33,9 @@ permissions:
    banknotes.deposit:
     default: true
     description: "allow players to deposit banknotes"
-   # banknotes.command:
-    # default: true
-    # description: "plugin commands"
+   banknotes.command:
+    default: true
+    description: "plugin commands like /banknotes check"
+    banknotes.command.admin:
+     default: false
+     description: "admin commands like /banknotes admin reload,validate,devalidate"
